# goldagentanalysis

./: .gitignore  README.md  pyproject.toml
.claude/skills/gold-replay/: SKILL.md
data/ground_truth/: baskets.parquet  trades_all.parquet
data/reference/: strategy_card.md
episodes/: catalog.csv
findings/: replay_expectancy.md  replay_trades.csv  replay_trades.parquet  three_way_comparison.md
findings/lessons/: index.json
live/: README.md  broker.py  requirements-live.txt  run_live_quantum.py  sizing.py
live/quantum/: __init__.py  _paths.py  backfill.py  config_live.py  gate3_margin.py  live_quantum.py  quantum_engine.py  quantum_features.py
reports/2024-06-07.evening/: 2024-06-07.evening.replay.json  2024-06-07.evening.replay.prompt.txt  _replay_manifest.json
reports/2025-04-07.evening/: 2025-04-07.evening.replay.json  2025-04-07.evening.replay.prompt.txt  _replay_manifest.json
reports/_examples/: 2024-06-07.evening.replay.json  _replay_summary_2024-06-07.json  replay_expectancy.md
reports/research/: _research_manifest.json
reports/research/2024-06-07.evening/: 2024-06-07.evening.prompt.txt
src/goldreplay/: __init__.py  align.py  basket.py  compare.py  config.py  engine.py  engine_baseline.py  enrich.py  episodes.py  features.py  findings_store.py  paths.py  replay.py  research.py  sizing.py
tests/: test_no_lookahead.py
